Исправляет ссылку на каталог

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <ul class="site-navigation">
           <li><a href="atelier.html">Студия</a></li>
           <li><a href="client.html">Клиенты</a></li>
-          <li><a href="shop.html">Магазин</a></li>
+          <li><a href="#">Магазин</a></li>
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-basket">
