Исправляет title страницы

--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Магазин шаблонов</title>
+    <title>Студия Нёрдс</title>
   </head>
   <body>
     <header class="main-header">
