Исправляет ошибки в разметке

--- a/catalog.html
+++ b/catalog.html
@@ -30,8 +30,8 @@
       </section>
       <section class="catalog">
         <h2 class="visually-hidden">Список шаблонов</h2>
+        <p>Сортировать:</p>
         <ul class="additional-filter">
-          <li>Сортировать:</li>
           <li><a class="button" href="#">По цене</a></li>
           <li><a class="button" href="#">По типу</a></li>
           <li><a class="button" href="#">По названию</a></li>
@@ -42,8 +42,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон Sedona">
             </a>
+            <h3>Sedona</h3>
             <p>
-              <b>Sedona</b>
               Информационный сайт для туристов
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -52,8 +52,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон Pink">
             </a>
+            <h3>Pink</h3>
             <p>
-              <b>Pink</b>
               Продуктовый лендинг приложения для iOS и Android
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -62,8 +62,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон Barbershop">
             </a>
+            <h3>Barbershop</h3>
             <p>
-              <b>Barbershop</b>
               Сайт салона красоты. Для мужчин, да.
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -72,8 +72,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон MISHKA">
             </a>
+            <h3>MISHKA</h3>
             <p>
-              <b>MISHKA</b>
               Интернет-магазин вязаных игрушек
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -82,8 +82,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон A Plus">
             </a>
+            <h3>A Plus</h3>
             <p>
-              <b>A Plus</b>
               Лендинг курсов повышения квалификации
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -92,8 +92,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон КВАСТ">
             </a>
+            <h3>КВАСТ</h3>
             <p>
-              <b>КВАСТ</b>
               Промо-сайт производителя крафтового кваса
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -107,17 +107,22 @@
         </ul>
       </section>
       <section class="maps">
+        <p class="main-contacts">
+          <b>Nёrds design studio</b><br>
+          191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8<br>
+          тел. +7 (812) 275-75-75
+        </p>
+        <a class="button" href="contacts-popap.html">Напишите нам</a>
         <!--Здесь будет карта-->
       </section>
     </main>
     <footer class="main-footer">
-      <div class="footer-social"> <!--Кнопки на соц. сети-->
-        <ul>
+        <ul class="footer-social">  <!--Кнопки на соц. сети-->
           <li><a class="social-button" href="#">Вконтакте</a>
           <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
-      </div>
       <p><b>Давайте дружить, это выгодно!</b></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
