--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation"> <!--Меню-->
-        <a class="main-header-logo" href="index.html">
+        <a class="main-header-logo" href="#">
           <img src="img/index-logo.svg" width="160" height="65" alt="Логотип компании «Nerds»">  <!--Логотип-->
         </a>
         <ul class="site-navigation">
@@ -23,15 +23,17 @@
     </header>
     <main class="container">
       <h1 class="visually-hidden">Веб студия «Nerds»</h1>
-      <section class="slider">  <!--Слайдер-->
+      <section class="slider-1">  <!--Слайдер-->
         <p><b>Долго, дорого, скурпулезно</b></p>
         <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
         <a href="#">Узнать больше</a>
-
+      </section>
+      <section class="slider-2">
         <p><b>Любим математику как никто другой</b></p>
         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
         <a href="#">Узнать больше</a>
-
+      </section>
+      <section class="slider-3">
         <p><b>Только ночь, только хардкор</b></p>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
         <a href="#">Узнать больше</a>
@@ -99,18 +101,23 @@
         </ul>
       </section>
       <section class="maps">
+        <p class="main-contacts">
+          <b>Nёrds design studio</b><br>
+          191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8<br>
+          тел. +7 (812) 275-75-75
+        </p>
+        <a class="button" href="contacts-popap.html">Напишите нам</a>
         <!--Здесь будет карта-->
       </section>
 
     </main>
     <footer class="main-footer">
-      <div class="footer-social"> <!--Кнопки на соц. сети-->
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
-      </div>
+      <ul class="footer-social">  <!--Кнопки на соц. сети-->
+        <li><a class="social-button" href="#">Вконтакте</a>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+      </ul>
       <p><b>Давайте дружить, это выгодно!</b></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
