--- a/index.html
+++ b/index.html
@@ -121,5 +121,11 @@
       <p><b>Давайте дружить, это выгодно!</b></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
+    <section class="modal modal-login">
+      <h2 class="visually-hidden">Связаться с нами</h2>
+      <b>Напишите нам</b>
+      <!-- Здесь будет форма -->
+      <span class="modal-close">x</span>
+    </section>
   </body>
 </html>
