--- a/2/catalog.html
+++ b/2/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Магазин шаблонов</title>
+    <title>Студия Нёрдс</title>
     <base href="https://htmlacademy-htmlcss.github.io/675031-nerds/2/">
 </head>
   <body>
@@ -14,7 +14,7 @@
         <ul class="site-navigation">
           <li><a href="atelier.html">Студия</a></li>
           <li><a href="client.html">Клиенты</a></li>
-          <li><a href="shop.html">Магазин</a></li>
+          <li><a href="#">Магазин</a></li>
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-basket">
@@ -31,8 +31,8 @@
       </section>
       <section class="catalog">
         <h2 class="visually-hidden">Список шаблонов</h2>
+        <p>Сортировать:</p>
         <ul class="additional-filter">
-          <li>Сортировать:</li>
           <li><a class="button" href="#">По цене</a></li>
           <li><a class="button" href="#">По типу</a></li>
           <li><a class="button" href="#">По названию</a></li>
@@ -43,8 +43,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон Sedona">
             </a>
+            <h3>Sedona</h3>
             <p>
-              <b>Sedona</b>
               Информационный сайт для туристов
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -53,8 +53,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон Pink">
             </a>
+            <h3>Pink</h3>
             <p>
-              <b>Pink</b>
               Продуктовый лендинг приложения для iOS и Android
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -63,8 +63,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон Barbershop">
             </a>
+            <h3>Barbershop</h3>
             <p>
-              <b>Barbershop</b>
               Сайт салона красоты. Для мужчин, да.
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -73,8 +73,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон MISHKA">
             </a>
+            <h3>MISHKA</h3>
             <p>
-              <b>MISHKA</b>
               Интернет-магазин вязаных игрушек
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -83,8 +83,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон A Plus">
             </a>
+            <h3>A Plus</h3>
             <p>
-              <b>A Plus</b>
               Лендинг курсов повышения квалификации
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -93,8 +93,8 @@
             <a href="#">
               <img src="#" width="111" height="111" alt="Шаблон КВАСТ">
             </a>
+            <h3>КВАСТ</h3>
             <p>
-              <b>КВАСТ</b>
               Промо-сайт производителя крафтового кваса
               <a class="button" href="#">9900 Руб.</a>
             </p>
@@ -108,19 +108,30 @@
         </ul>
       </section>
       <section class="maps">
+        <p class="main-contacts">
+          <b>Nёrds design studio</b><br>
+          191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8<br>
+          тел. +7 (812) 275-75-75
+        </p>
+        <a class="button" href="contacts-popap.html">Напишите нам</a>
         <!--Здесь будет карта-->
       </section>
     </main>
     <footer class="main-footer">
-      <div class="footer-social"> <!--Кнопки на соц. сети-->
-        <ul>
+        <ul class="footer-social">  <!--Кнопки на соц. сети-->
           <li><a class="social-button" href="#">Вконтакте</a>
           <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
-      </div>
       <p><b>Давайте дружить, это выгодно!</b></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
+    <section class="modal modal-login">
+      <h2 class="visually-hidden">Связаться с нами</h2>
+      <b>Напишите нам</b>
+      <!-- Здесь будет форма -->
+      <span class="modal-close">x</span>
+    </section>
   </body>
 </html>
