--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation"> <!--Меню-->
-        <a class="main-header-logo" href="index.html">
-          <img src="img/index-logo.svg" width="160" height="65" alt="Логотип компании «Nerds»">  <!--Логотип-->
+        <a class="main-header-logo" href="#">
+          <img src="img/nerds-logo-1.svg" width="160" height="65" alt="Логотип компании «Nerds»">  <!--Логотип-->
         </a>
         <ul class="site-navigation">
           <li><a href="atelier.html">Студия</a></li>
@@ -40,7 +40,7 @@
         <ul class="catalog-list">
           <li class="catalog-item">
             <a href="#">
-              <img src="#" width="111" height="111" alt="Шаблон Sedona">
+              <img src="img/img-sedona.jpg" width="360" height="576" alt="Шаблон «Sedona»">
             </a>
             <h3>Sedona</h3>
             <p>
@@ -50,7 +50,7 @@
           </li>
           <li class="catalog-item">
             <a href="#">
-              <img src="#" width="111" height="111" alt="Шаблон Pink">
+              <img src="img/img-pink.jpg" width="360" height="576" alt="Шаблон «Pink»">
             </a>
             <h3>Pink</h3>
             <p>
@@ -60,7 +60,7 @@
           </li>
           <li class="catalog-item">
             <a href="#">
-              <img src="#" width="111" height="111" alt="Шаблон Barbershop">
+              <img src="img/img-barbershop.jpg" width="360" height="576" alt="Шаблон «Barbershop»">
             </a>
             <h3>Barbershop</h3>
             <p>
@@ -70,7 +70,7 @@
           </li>
           <li class="catalog-item">
             <a href="#">
-              <img src="#" width="111" height="111" alt="Шаблон MISHKA">
+              <img src="img/img-mishka.jpg" width="360" height="576" alt="Шаблон «MISHKA»">
             </a>
             <h3>MISHKA</h3>
             <p>
@@ -80,7 +80,7 @@
           </li>
           <li class="catalog-item">
             <a href="#">
-              <img src="#" width="111" height="111" alt="Шаблон A Plus">
+              <img src="img/img-aplus.jpg" width="360" height="576" alt="Шаблон «A Plus»">
             </a>
             <h3>A Plus</h3>
             <p>
@@ -90,7 +90,7 @@
           </li>
           <li class="catalog-item">
             <a href="#">
-              <img src="#" width="111" height="111" alt="Шаблон КВАСТ">
+              <img src="img/img-kvast.jpg" width="360" height="576" alt="Шаблон «КВАСТ»">
             </a>
             <h3>КВАСТ</h3>
             <p>
@@ -114,7 +114,7 @@
           тел. +7 (812) 275-75-75
         </p>
         <a class="button" href="contacts-popap.html">Напишите нам</a>
-        <!--Здесь будет карта-->
+        <img src="img/map-marker.png" width="1440" height="416" alt="Карта нашего местонахождения">
       </section>
     </main>
     <footer class="main-footer">
