--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation"> <!--Меню-->
         <a class="main-header-logo" href="#">
-          <img src="img/index-logo.svg" width="160" height="65" alt="Логотип компании «Nerds»">  <!--Логотип-->
+          <img src="img/nerds-logo-1.svg" width="160" height="65" alt="Логотип компании «Nerds»">  <!--Логотип-->
         </a>
         <ul class="site-navigation">
           <li><a href="atelier.html">Студия</a></li>
@@ -27,31 +27,37 @@
         <p><b>Долго, дорого, скурпулезно</b></p>
         <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
         <a href="#">Узнать больше</a>
+        <img src="img/slide1.png" width="698" height="413" alt="Слайдер 1">
       </section>
       <section class="slider-2">
         <p><b>Любим математику как никто другой</b></p>
         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
         <a href="#">Узнать больше</a>
+        <img src="img/slide2.png" width="663" height="430" alt="Слайдер 2">
       </section>
       <section class="slider-3">
         <p><b>Только ночь, только хардкор</b></p>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
         <a href="#">Узнать больше</a>
+        <img src="img/slide3.png" width="759" height="411" alt="Слайдер 3">
       </section>
       <section class="features">
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="features-list">
           <li class="feature-item">
+            <img src="img/illustration-1.png" width="300" height="146" alt="Изображение Веб сайты" >
             <h3>Веб сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="feature-item">
+            <img src="img/illustration-2.png" width="300" height="146" alt="Изображение Приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="feature-item">
+            <img src="img/illustration-3.png" width="300" height="146" alt="Изображение Презентации">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <a class="button" href="#">Заказать</a>
@@ -68,6 +74,7 @@
           <li>Мобильных приложений для iOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
+        <img src="img/nerds-illustration.png" width="360" height="208" alt="Логотип компании «Nerds»">
         <p>с 2004 года Любим точность во всем:</p>
         <ul class="our-advantages">
           <li>
@@ -87,16 +94,16 @@
       <section class="partners">
         <ul>
           <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="#" width="111" height="26" alt="Партнёр Htmlacademy"></a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png%20copy.png" width="199" height="68" alt="Партнёр «Htmlacademy»"></a>
           </li>
           <li>
-            <a href="#"><img src="#" width="111" height="26" alt="Партнёр Borodinski"></a>
+            <a href="#"><img src="img/logo-2.png%20copy.png" width="209" height="90" alt="Партнёр «Borodinski»"></a>
           </li>
           <li>
-            <a href="#"><img src="#" width="111" height="26" alt="Партнёр Pink"></a>
+            <a href="#"><img src="img/logo-3.png%20copy.png" width="185" height="52" alt="Партнёр «Pink»"></a>
           </li>
           <li>
-            <a href="#"><img src="#" width="111" height="26" alt="Партнёр Mishka"></a>
+            <a href="#"><img src="img/logo-4.png%20copy.png" width="173" height="84" alt="Партнёр «Mishka»"></a>
           </li>
         </ul>
       </section>
@@ -108,7 +115,7 @@
           тел. +7 (812) 275-75-75
         </p>
         <a class="button" href="contacts-popap.html">Напишите нам</a>
-        <!--Здесь будет карта-->
+        <img src="img/map-marker.png" width="1440" height="416" alt="Карта нашего местонахождения">
       </section>
 
     </main>
