--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="main-header">
             <nav class="main-navigation">
                 <a class="logo-navigation"><img src="index.html"></a>
                 <ul class="main-nav-list">
@@ -17,7 +17,7 @@
                 </ul>
                 <a class="shop-nav">Корзина</a>
             </nav>
-
+        </header>
             <main>
                 <div>
                     <h1>Долго, дорого, скрупулезно</h1>
@@ -57,7 +57,7 @@
 
 <img src="" alt="Nerds">
 <p>с 2004 года любим точность во всем:
-    <table>
+    <table class="data">
         <tr>
             <th>146%</th>
             <th>100%</th>
@@ -70,9 +70,25 @@
         </tr>
     </table>
 </p>
+
+<ul class="our-works">
+<li class="works-item"><img src="" alt="html academy"></li>
+<li class="works-item"><img src="" alt="Borodinskiy"></li>
+<li class="works-item"><img src="" alt="Pink"></li>
+<li class="works-item"><img src="" alt="Mishka"></li>
+</ul>
+<img src="" alt="our location">
 </section>
     
             </main>
-        </header>
+       <footer class="main-footer">
+<ul class="our-pages">
+    <li class="page-item"><a>vk</a> </li>
+    <li class="page-item"><a>facebook</a> </li>
+    <li class="page-item"><a>instagram</a></li>
+</ul>
+<p><b>Давайте дружить, это выгодно!</b> <br>
+Скидка 10% для друзей из социальных сетей</p>
+       </footer>
     </body>
 </html>
