--- a/Catalog.html
+++ b/Catalog.html
@@ -6,9 +6,9 @@
     <body>
         <header class="main-header">
             <nav class="main-navigation">
-                <a class="logo-navigation"><img src="index.html"></a>
+                <a class="logo-navigation"><img src="img/nerds-logo.svg"></a>
                 <ul class="main-nav-list">
-                    <li class="main-nav-list-item"><a href="">Студия</a></li>
+                    <li class="main-nav-list-item"><a href="index.html">Студия</a></li>
                     <li class="main-nav-list-item"><a href="">Клиенты</a></li>
                     <li class="main-nav-list-item"><a href="">Магазин</a></li>
                     <li class="main-nav-list-item"><a href="">Контакты</a></li>
@@ -24,12 +24,12 @@
 
             </form>
             <ul class="works">
-                <li><img></li>
-                <li><img></li>
-                <li><img></li>
-                <li><img></li>
-                <li><img></li>
-                <li><img></li>
+                <li><img src="img/img-sedona.jpg" alt="sedona"></li>
+                <li><img src="img/img-pink.jpg" alt="Image pink"></li>
+                <li><img src="img/img-barbershop.jpg"  alt="barbeshop"></li>
+                <li><img src="img/img-mishka.jpg" alt="Mishka"></li>
+                <li><img src="img/img-aplus.jpg" alt="Alpus"></li>
+                <li><img src="img/img-kvast.jpg" alt="Kvas"></li>
             </ul>
             <nav class="page-nav">
                 <ul class="page-list">
@@ -44,11 +44,12 @@
         </main>
 
         <footer class="main-footer">
-        <img src="" alt="our location">
+        <img src="img/map.png" alt="our location">
+        <img src="img/map-marker.png" alt="map maker">
         <ul class="our-pages">
-            <li class="page-item"><a>vk</a> </li>
-            <li class="page-item"><a>facebook</a> </li>
-            <li class="page-item"><a>instagram</a></li>
+            <li class="page-item"><a> <img src="img/vk-icon.svg" alt="vk"> </a> </li>
+            <li class="page-item"><a> <img src="img/fb-icon.svg"  alt="facebook"> </a> </li>
+            <li class="page-item"><a> <img src="img/insta-icon.svg" alt="instagram"> </a></li>
         </ul>
         <p><b>Давайте дружить, это выгодно!</b> <br> Скидка 10% для друзей из социальных сетей</p>
     </footer>
