--- a/index.html
+++ b/index.html
@@ -1,94 +1,102 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>nerds</title>
-    </head>
 
-    <body>
-        <header class="main-header">
-            <nav class="main-navigation">
-                <a class="logo-navigation"><img src="index.html"></a>
-                <ul class="main-nav-list">
-                    <li class="main-nav-list-item"><a href="">Студия</a></li>
-                    <li class="main-nav-list-item"><a href="">Клиенты</a></li>
-                    <li class="main-nav-list-item"><a href="">Магазин</a></li>
-                    <li class="main-nav-list-item"><a href="">Контакты</a></li>
-                </ul>
-                <a class="shop-nav">Корзина</a>
-            </nav>
-        </header>
-            <main>
-                <div>
-                    <h1>Долго, дорого, скрупулезно</h1>
-                    <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                    <a class="button red-button" href="#">Узнать больше</a>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <title>nerds</title>
+</head>
 
-                <section class="services">
-<ul class="services-list">
-<li class="service-item">
-    <h2>Веб-сайты</h2>
-    <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-    <a class="button red-order-button">Заказать</a>
-</li>
-<li class="service-item">
-    <h2>приложения</h2>
-    <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-    <a class="button green-order-button">Заказать</a>
-</li>
-<li class="service-item">
-<h2>Презентации</h2>
-<p>Вы даже не подозреваете, насколько вы изумительны!</p>
-<a class="button yellow-order-button">Заказать</a>
-</li>
-</ul>
-    </section>
-<section class="about-us">
-<h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
-<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы</p>
-<p><b>Выполняем заказы на разработку:</b>
-</p>
-<ul class="our-services">
-    <li>Веб-сайтов любой сложности</li>
-    <li>Мобильных приложений для IOS И Android</li>
-    <li>Слайдшоу и видео для корпоративных презентаций</li>
-</ul>
+<body>
+    <header class="main-header">
+        <img src="img/nerds-logo.svg" alt="Logo">
+        <nav class="main-navigation">
+            <ul class="main-nav-list">
+                <li class="main-nav-list-item"><a href="">Студия</a></li>
+                <li class="main-nav-list-item"><a href="">Клиенты</a></li>
+                <li class="main-nav-list-item"><a href="">Магазин</a></li>
+                <li class="main-nav-list-item"><a href="">Контакты</a></li>
+            </ul>
+            <a class="shop-nav">Корзина</a>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>Долго, дорого, скрупулезно</h1>
+            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+            <a class="button red-button" href="#">Узнать больше</a>
+            <img src="img/slide1.png" alt="картинка"> 
+        </div>
 
-<img src="" alt="Nerds">
-<p>с 2004 года любим точность во всем:
-    <table class="data">
-        <tr>
-            <th>146%</th>
-            <th>100%</th>
-            <th>50%</th>
-        </tr>
-        <tr>
-            <td>Уровень самоотдачи</td>
-            <td>Соблюдение сроков</td>
-            <td>Минимальная предоплата</td>
-        </tr>
-    </table>
-</p>
+        <section class="services">
+            <ul class="services-list">
+                <li class="service-item">
+                    <img src="img/illustration-1.jpg" alt="Иллюстрация 1">
+                    <h2>Веб-сайты</h2>
+                    <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                    <a class="button red-order-button">Заказать</a>
+                </li>
+                <li class="service-item">
+                    <img src="img/illustration-2.jpg" alt="Иллюстрация 2">
+                    <h2>приложения</h2>
+                    <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                    <a class="button green-order-button">Заказать</a>
+                </li>
+                <li class="service-item">
+                    <img src="img/illustration-3.jpg" alt="Иллюстрация 3">
+                    <h2>Презентации</h2>
+                    <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                    <a class="button yellow-order-button">Заказать</a>
+                </li>
+            </ul>
+        </section>
+        <section class="about-us">
+            <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+                рук, как роботы</p>
+            <p><b>Выполняем заказы на разработку:</b>
+            </p>
+            <ul class="our-services">
+                <li>Веб-сайтов любой сложности</li>
+                <li>Мобильных приложений для IOS И Android</li>
+                <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
 
-<ul class="our-works">
-<li class="works-item"><img src="" alt="html academy"></li>
-<li class="works-item"><img src="" alt="Borodinskiy"></li>
-<li class="works-item"><img src="" alt="Pink"></li>
-<li class="works-item"><img src="" alt="Mishka"></li>
-</ul>
-<img src="" alt="our location">
-</section>
-    
-            </main>
-       <footer class="main-footer">
-<ul class="our-pages">
-    <li class="page-item"><a>vk</a> </li>
-    <li class="page-item"><a>facebook</a> </li>
-    <li class="page-item"><a>instagram</a></li>
-</ul>
-<p><b>Давайте дружить, это выгодно!</b> <br>
-Скидка 10% для друзей из социальных сетей</p>
-       </footer>
-    </body>
+            <img src="img/nerds-illustration.jpg" alt="Nerds illustration">
+            <p>с 2004 года любим точность во всем:
+                <table class="data">
+                    <tr>
+                        <th>146%</th>
+                        <th>100%</th>
+                        <th>50%</th>
+                    </tr>
+                    <tr>
+                        <td>Уровень самоотдачи</td>
+                        <td>Соблюдение сроков</td>
+                        <td>Минимальная предоплата</td>
+                    </tr>
+                </table>
+            </p>
+
+            <ul class="our-works">
+                <li class="works-item"><img src="img/logo-1.png" alt="html academy"></li>
+                <li class="works-item"><img src="img/logo-2.png" alt="Borodinskiy"></li>
+                <li class="works-item"><img src="img/logo-3.png" alt="Pink"></li>
+                <li class="works-item"><img src="img/logo-4.png" alt="Mishka"></li>
+            </ul>
+
+        </section>
+
+    </main>
+    <footer class="main-footer">
+        <img src="img/map.png" alt="our location">
+        <img src="img/map-marker.png" alt="marker">
+        <ul class="our-pages">
+            <li class="page-item"><a> <img src="img/vk-icon.svg"  alt="VK"> </a> </li>
+            <li class="page-item"><a> <img src="img/fb-icon.svg" alt="facebook"> </a> </li>
+            <li class="page-item"><a> <img src="img/insta-icon.svg" alt="instagram"> </a></li>
+        </ul>
+        <p><b>Давайте дружить, это выгодно!</b> <br> Скидка 10% для друзей из социальных сетей</p>
+    </footer>
+</body>
+
 </html>
