--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                     <img src="img/illustration-1.jpg" alt="Иллюстрация 1">
                     <h2>Веб-сайты</h2>
                     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <a class="button red-order-button">Заказать</a>
+                    <button class="buttonOrder">Заказать</button>
                 </li>
                 <li class="service-item">
                     <img src="img/illustration-2.jpg" alt="Иллюстрация 2">
                     <h2>приложения</h2>
                     <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-                    <a class="button green-order-button">Заказать</a>
+                   <button class=""buttonOrder>Заказать</button>
                 </li>
                 <li class="service-item">
                     <img src="img/illustration-3.jpg" alt="Иллюстрация 3">
                     <h2>Презентации</h2>
                     <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-                    <a class="button yellow-order-button">Заказать</a>
+                    <button class=""buttonOrder>Заказать</button>
                 </li>
             </ul>
         </section>
