--- a/Catalog.html
+++ b/Catalog.html
@@ -20,7 +20,43 @@
         <main>
             <section>
             <h1>Магазин готовых шаблонов</h1>
-            <form>
+            <form class="SelectForm" method="POST" action="https://echo.htmlacademy.ru">
+            <fieldset>
+                <legend>Стоимость:</legend>
+                <input type="range" name="rangePrice">
+                <label for="priceBegin">От</label>
+                <input type="number" id="priceBegin" name="BeginPrice">
+                <label for="priceEnd">До</label>
+                <input type="number" id="priceEnd" name="EndPrice">
+
+            </fieldset>
+
+            <fieldset>
+                <legend>Сетка:</legend>
+                <input type="radio" name="gridType" value="Adapt" id="r1">
+                <label for="r1">Адаптивная</label>
+                <input type="radio" name="gridType" value="Fix" id="r2">
+                <label for="r2">Фиксированная</label>
+                <input type="radio" name="gridType" value="Rez" id="r3">
+                <label for="r3">Резиновая</label>
+            </fieldset>
+
+<fieldset>
+    <legend>Особенности:</legend>
+   
+    <input   type="checkbox" name="Advance" value="Слайдер" id="ch1">
+    <label for="ch1">Слайдер</label>
+    <input type="checkbox" name="Advance" value="Блок преимуществ" id="ch2">
+    <label for="ch2">Блок преимуществ</label>
+    <input type="checkbox" name="Advance" value="Новости" id="ch3">
+    <label for="ch3">Новости</label>
+    <input type="checkbox" name="Advance" value="Галерея" id="ch4">
+    <label for="ch4">Галерея</label>
+    <input type="checkbox" name="Advance" value="Корзина" id="ch5">
+    <label for="ch5">Корзина</label>
+</fieldset>
+
+ <input type="submit" value="Показать">
 
             </form>
             <ul class="works">
