--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="css/style.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>nerds</title>
 </head>
@@ -16,6 +17,7 @@
                 <li class="main-nav-list-item"><a href="">Магазин</a></li>
                 <li class="main-nav-list-item"><a href="">Контакты</a></li>
             </ul>
+            <img src="img/cart-icon.svg" alt="box">
             <a class="shop-nav">Корзина</a>
         </nav>
     </header>
@@ -33,19 +35,19 @@
                     <img src="img/illustration-1.jpg" alt="Иллюстрация 1">
                     <h2>Веб-сайты</h2>
                     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <button class="buttonOrder">Заказать</button>
+                    <button class="buttonOrderRed red-button">Заказать</button>
                 </li>
                 <li class="service-item">
                     <img src="img/illustration-2.jpg" alt="Иллюстрация 2">
                     <h2>приложения</h2>
                     <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-                   <button class=""buttonOrder>Заказать</button>
+                   <button class="buttonOrderGreen">Заказать</button>
                 </li>
                 <li class="service-item">
                     <img src="img/illustration-3.jpg" alt="Иллюстрация 3">
                     <h2>Презентации</h2>
                     <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-                    <button class=""buttonOrder>Заказать</button>
+                    <button class="buttonOrderYellow">Заказать</button>
                 </li>
             </ul>
         </section>
